@@ -93,7 +93,6 @@ fi
 
 # Don't override the endorsed dir if the user has set it previously
 if [ -z "$JAVA_ENDORSED_DIRS" ]; then
-  # Set the default -Djava.endorsed.dirs argument
   JAVA_ENDORSED_DIRS="$BASEDIR"/endorsed
 fi
 
